--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    if: github.repository == 'reaviz/reagraph'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -16,24 +15,15 @@ jobs:
           fetch-depth: 0
 
       - name: Use Node.js 18.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           version: 18.x
-
-      - name: Install deps and build (with cache)
-        uses: bahmutov/npm-install@v1
-
+      - run: npm install
       - name: Build Prod
         run: npm run build
 
       - name: Build Storybook
         run: npm run build-storybook
-
-      # - name: Publish Chromatic
-      #  run: yarn chromatic
-
-      - name: Copy Domain
-        run: npm run copy
 
       - name: Publish Storybook to GH Pages
         if: success()
